Fix overlap size

--- a/meinberlin/assets/scss/components/_filter_bar.scss
+++ b/meinberlin/assets/scss/components/_filter_bar.scss
@@ -36,5 +36,6 @@
 
 .filter-bar--overlap {
     position: relative;
-    top: -0.8em;
+    $button-height: 2.4em;
+    top: -($button-height / 2);
 }
